# RaylibMedia_CS

./: .gitignore  CMakeLists.txt  README.md  RaylibMedia.sln
CMakeModules/: FindFFMPEG.cmake  FindRAYLIB.cmake
csharp/: NUGET.md  README.md  build-native.ps1  pack.ps1  validate-package.ps1
csharp/Example/: Example.csproj  Program.cs
csharp/RaylibMedia/: ManagedStreamSource.cs  MediaConfiguration.cs  MediaEnums.cs  MediaLoadException.cs  MediaProperties.cs  MediaStream.cs  NativeMethods.cs  README.md  RaylibMedia.csproj  RaylibMediaRuntime.cs  THIRD-PARTY-NOTICES.md
csharp/RaylibMedia.Tests/: Program.cs  RaylibMedia.Tests.csproj
csharp/RaylibMedia.Tests/native/: CMakeLists.txt  raymedia_stub.c
src/: raymedia.h  rmedia.c
